# sdl-draw-3d

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  _build.ps1  _build.sh  build-linux.sh  build-mingw.cmd  build-mingw.sh  build.cmd  build.sh  camera.h  lib-rasterizers.h  lib.h  liblog.h  libsdl.h  main.c  minecraft-edit-cubes.c  minecraft-edit-cubes.xe  mk-raylib.sh  mk.sh  multistep-tool.h  orbit-control.h  prepare-deps.sh  prepare-deps.win64-mingw.sh  rainbow-smileyz.vxde  ray.h  raylib-app.c  raylib-app.xe  rmath-extras.h  rmodels-extras.h  scene.h  temp.0.vxde  temp.vxde  temp.vxdi  vector.h  voxd31  voxd3i-app.c  voxd3i-app.xe  voxel.h  (+19 more)
.github/workflows/: build.yml
assets/shaders/: depth.fs  depth.vs  shadow.vs  shadowmap.330.fs
shaders/: depth.fs  depth.vs  shadow.fs  shadow.vs
shadowmapper/: camera.h  light.h
vxde/: temp.vxdi
